# FractalGl

./: Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: fragment.shader  vertex.shader
src/: fractal_app.rs  main.rs
src/app/: clickpanel.rs  drag_panel.rs  fractal.rs  fractal_gl.rs  mod.rs  pos.rs  position.rs  state.rs
