[package]
name = "fractal_gl"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "^0.30"
egui_glow = "^0.30"
egui = "^0.30"
glow = "^0.13"
log = "^0.4"
simple_logger = "^5.0"
emath = "^0.27"
anyhow = "^1.0.95"
